# obscureV4

./: README.md  pyproject.toml
obscure/: __init__.py  __main__.py  obscure.py
tests/: test_obscure.py
